Register and login route properly set up

--- a/public/login.html
+++ b/public/login.html
@@ -37,12 +37,12 @@
             <img src="images/user_icon2.png" alt="">
             <h1>Sign In!</h1>
             <form method="POST" action="/login" class="login-form">
-                <input type="email" class="input-box" placeholder="Your Email">
-                <input type="password" class="input-box" placeholder="Your Password">
-                <button type="button" class="login-form-btn">Login</button>
+                <input type="email" class="input-box" placeholder="Your Email" name="email">
+                <input type="password" class="input-box" placeholder="Your Password" name="password">
+                <button type="submit" class="login-form-btn">Login</button>
                 <p>Don't have an account? <a href="register.html"><br>Register</a></p>
-                
             </form>
+            
         </div>
     </section>
     <script src="js/script.js"></script>
